# magent2

./: .agent_instructions.txt  .baseline-secrets  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .tmp_pr.json  .xenon.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  PR_DESCRIPTION.md  README.md  docker-compose.yml  dump.rdb  get-docker.sh  justfile  pyproject.toml  todo.md
.cache/: issue_68.json  issue_68_comments.json
.github/: pull_request_template.md
.github/scripts/: mypy_staged.py
.github/scripts/ci/: complexity_check.sh  type_check.sh  update_complexity_baseline.sh  update_type_baseline.sh
.github/workflows/: ci.yml
.pydeps/pytest-8.4.2.dist-info/: RECORD
.pydeps/pytest_randomly-3.16.0.dist-info/: RECORD
chat_tui/: Cargo.toml
chat_tui/src/: main.rs  sse.rs
docs/: CONTRACTS.md  FRONTEND_TUI.md  ORCHESTRATION.md  PARALLEL_WORK.md  PRD.md
docs/HANDOVERS/: README.md  feat-chat-tool-bus-#37.md  feat-client-log-events-#59.md  feat-client-one-shot-mode-#56.md  feat-client-v1-polish.md  feat-core-types-tightening.md  feat-docs-alignment.md  feat-gateway-polish-#39.md  feat-gateway-sse-offload.md  feat-mcp-stdio-servers-#36.md  feat-observability-wiring-#40.md  feat-observability-wiring-v2.md  feat-openai-agents-runner-#33.md  feat-ruff-config-tightening.md  feat-signals-v2-policy-and-sse.md  feat-team-registry-and-scope-enforcement.md  feat-terminal-function-tools-#34.md  feat-terminal-redaction-env.md  feat-terminal-safety-hardening-#41.md  feat-todo-function-tools-#35.md  feat-worker-idle-backoff.md  feat-worktree-allocator.md
docs/demo_logs/: conv-demo-10turn.jsonl  conv-openai-10turn.txt
docs/handovers/: feat-todo-function-tools-#35.md
docs/refs/: README.md  docker-pytest.md  index.md  mcp.md  observability.md  openai-agents-sdk-faq.md  openai-agents-sdk.md  quality-gates.md  redis-streams.md  sse.md  subprocess.md  uv-gha.md
magent2/: __init__.py  cli.py
magent2/bus/: interface.py  redis_adapter.py  utils.py
magent2/client/: __init__.py  cli.py
magent2/gateway/: app.py  asgi.py
magent2/models/: envelope.py
magent2/observability/: __init__.py  index.py
magent2/runner/: config.py  demo_runner.py  openai_agents_runner.py  openai_responses_runner.py
magent2/team/: __init__.py  branch.py  registry.py  worktree.py
magent2/tools/: __init__.py  orchestrate.py  registry.py  tool_events.py
magent2/tools/chat/: __init__.py  function_tools.py
magent2/tools/mcp/: __init__.py  client.py  config.py  gateway.py  registry.py
magent2/tools/signals/: __init__.py  impl.py  wrappers.py
magent2/tools/terminal/: __init__.py  function_tools.py  tool.py
magent2/tools/todo/: __init__.py  models.py  redis_store.py  tools.py
magent2/worker/: __init__.py  __main__.py  worker.py
scripts/: __init__.py  client.py  compose_down_probe.sh  example_agent.py  example_agent_docs.md  run_local.py  setup_env.sh
tasks/cli-streaming-library/: plan.md  research.md
tasks/tui-agents-graph/: plan.md  research.md
tasks/tui-auto-scroll-follow/: plan.md  research.md
tasks/tui-client-reuse/: plan.md  research.md
tasks/tui-keybinding-modes/: plan.md  research.md
tasks/tui-network-io-loop/: plan.md
tasks/tui-render-cache/: research.md
tasks/tui-typing-indicator/: plan.md  research.md
tests/: conftest.py  test_branch_allocator.py  test_bus_interface.py  test_bus_redis.py  test_chat_function_tool.py  test_client_log_events.py  test_client_modes.py  test_client_one_shot.py  test_client_stream_resume.py  test_envelope.py  test_gateway.py  test_mcp_demo_optional.py  test_mcp_stdio.py  test_observability.py  test_observability_wiring.py  test_observer_endpoints.py  test_observer_index.py  test_orchestrate.py  test_runner_sdk.py  test_signals.py  test_team_registry.py  test_terminal_function_tools.py  test_terminal_safety.py  test_terminal_tool.py  test_todo_store.py  test_todo_tools.py  test_worker.py  test_worker_redis_groups.py  test_worktree_allocator.py
tests/e2e/: conftest.py  test_docker_e2e.py
tests/helpers/: bus.py
