[project]
name = "magent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "openai-agents>=0.2.11",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn==0.32.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-qq --disable-warnings --show-capture=no --tb=no -r fE --junitxml=reports/junit.xml --json-report --json-report-file=reports/pytest-report.json"
asyncio_mode = "auto"
timeout = 60
timeout_method = "thread"
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-randomly>=3.16.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.12",
]
